v1/04-기능 명세서.md
# 04. 기능 명세서

> **버전**: v1.2
>
> **핵심 정책 요약 (전체 문서 공통)**
>
> | 정책 | 결정 | 이유 |
> |------|------|------|
> | 예약 모델 | **즉시 RESERVED** (판매자 승인 없음) | 3주 일정 + 당근마켓 실제 UX |
> | 채팅 생성 | **예약 전 자유 채팅 허용** | 중고거래 실제 흐름 반영 |
> | PRODUCT 개념 | **중고 판매글(Listing)** | 카탈로그 상품 아님 |
> | 이미지 처리 | **PRODUCT_IMAGE 테이블 저장** (파일 업로드 미구현) | ERD/패키지 구조 기준 통일 |

---

## 1. 회원 인증

### 1-1. 회원가입

**요청 데이터**: 이메일, 비밀번호, 닉네임

**처리 로직**:
1. 이메일 형식 검증 (RFC 5322)
2. 비밀번호 정책 검증 (8자 이상, 영문+숫자 조합)
3. 이메일 중복 조회 (`SELECT 1 FROM member WHERE email = ?`)
4. BCrypt(strength=10) 비밀번호 해시
5. Member 엔티티 저장
6. 201 Created 반환

**실패 케이스**:
- 이메일 중복 → 409 Conflict `{ "code": "DUPLICATE_EMAIL" }`
- 유효성 오류 → 400 Bad Request

---

### 1-2. 로그인 & JWT 발급

**JWT 구조**:

| 토큰 | 만료 | 저장 위치 | 용도 |
|------|------|-----------|------|
| AccessToken | 15분 | 클라이언트 메모리 | API 인증 헤더 |

**AccessToken Payload**:
```json
{
  "sub": "memberId",
  "email": "user@example.com",
  "nickname": "닉네임",
  "iat": 1700000000,
  "exp": 1700000900
}
```

**처리 로직**:
1. 이메일로 회원 조회
2. BCrypt 비교
3. AccessToken 생성 (HMAC-SHA256)
4. 응답 반환

---

## 2. 상품 관리

### 2-1. 상품 등록

**필드 제약**:

| 필드 | 타입 | 제약 |
|------|------|------|
| title | String | 2~40자, NotBlank |
| description | String | 최대 1000자 |
| price | Integer | 100~99,999,999 |
| categoryId | Long | 카테고리 ID |
| status | Enum | 기본값 SALE |

**이미지 처리 정책**:
- `PRODUCT_IMAGE` 별도 테이블에 저장 (`image_url`, `sort_order` 컬럼)
- 파일 업로드(Multipart, S3) 미구현 — 클라이언트가 외부 이미지 URL을 직접 전달
- 이미지 수정 시 기존 `PRODUCT_IMAGE` 레코드 전체 삭제 후 재등록 (전체 교체 방식)
- v2 이후 S3 Presigned URL 방식으로 전환 예정 (Out of Scope)

---

### 2-2. 상품 목록 조회

**페이지네이션**: Cursor 기반 (createdAt + id 조합)

> **왜 Cursor?** Offset 방식은 데이터 삽입/삭제 시 중복/누락 발생. 무한 스크롤 UX에 적합.

**정렬 기본값**: 최신 등록순 (createdAt DESC, id DESC)

**응답 필드**: id, title, price, thumbnailUrl, status, createdAt, likeCount

---

### 2-3. 상품 검색 (Caffeine + QueryDSL)

**검색 조건**:

| 파라미터 | 설명 | 필수 |
|----------|------|------|
| keyword | 제목 LIKE 검색 | 선택 |
| categoryId | 카테고리 ID | 선택 |
| status | 판매 상태 필터 | 선택 (기본: SALE) |

**QueryDSL 동적 쿼리 예시**:
```java
BooleanBuilder builder = new BooleanBuilder();
if (keyword != null) builder.and(product.title.containsIgnoreCase(keyword));
if (categoryId != null) builder.and(product.category.id.eq(categoryId));
if (status != null) builder.and(product.status.eq(status));
```

**인기 검색어 Caffeine 캐싱**:

| 항목 | 값 |
|------|----|
| 캐시 이름 | `popularKeywords` |
| TTL | 10분 |
| Max Size | 1 (단일 키 — top10 리스트) |
| 갱신 트리거 | 스케줄러 10분 주기 |
| 갱신 방법 | DB에서 `keyword_log` 집계 후 캐시 PUT |

```
검색 요청 → Caffeine 캐시 HIT? → 반환
                       ↓ MISS
              DB에서 TOP 10 집계 → 캐시 PUT → 반환
```

---

## 3. 거래 상태 관리 ⭐

### 3-1. 예약 모델 결정: 즉시 RESERVED

구매자가 [예약하기]를 누르면 **판매자 승인 없이 즉시 RESERVED**로 전이한다.

**왜 판매자 승인 단계(PENDING)를 두지 않는가?**
- 3주 일정에서 PENDING + 실시간 알림 구현은 범위 초과
- 당근마켓도 실제로 "예약하기 = 즉시 예약" 방식으로 동작
- 판매자가 원하지 않으면 RESERVED → SALE로 직접 취소 가능 (거절 효과)

---

### 3-2. 상태 전이 규칙 (API + 처리 주체 포함)

| 현재 상태 | 이벤트 | 다음 상태 | 처리 주체 | API |
|-----------|--------|-----------|-----------|-----|
| SALE | 예약하기 클릭 | **RESERVED** (즉시) | 구매자 | `POST /products/{id}/reserve` |
| RESERVED | 거래 시작 확인 | TRADING | 판매자 | `PATCH /trades/{id}/status` |
| RESERVED | 예약 취소 | SALE | 구매자 또는 판매자 | `PATCH /trades/{id}/status` |
| TRADING | 거래 완료 | SOLD | 판매자 | `PATCH /trades/{id}/status` |
| TRADING | 거래 취소 | SALE | 판매자 | `PATCH /trades/{id}/status` |
| SOLD | 리뷰 작성 | REVIEWED | 구매자 | `POST /trades/{id}/reviews` |
| SALE | 판매글 삭제 | DELETED | 판매자 | `DELETE /products/{id}` |

> **PRODUCT.status와 TRADE.status는 항상 동기화**: 위 전이 발생 시 TradeService 한 트랜잭션 내에서 두 테이블을 함께 업데이트한다.

---

### 3-3. 권한 매트릭스

| 액션 | 판매자 | 구매자 | 비고 |
|------|--------|--------|------|
| 상품 등록/수정/삭제 | ✅ | ❌ | 본인 판매글만 |
| 예약하기 | ❌ | ✅ | 본인 상품 예약 불가 |
| 예약 취소 | ✅ | ✅ | 양측 가능 |
| 거래 시작 확인 | ✅ | ❌ | |
| 거래 완료 처리 | ✅ | ❌ | |
| 거래 취소 (TRADING→SALE) | ✅ | ❌ | |
| 리뷰 작성 | ❌ | ✅ | 해당 거래의 구매자만 |
| 채팅 시작 | ❌ (자기 상품) | ✅ | |

---

### 3-4. 동시성 제어 — 예약 처리 상세

**문제**: 동시에 N명이 예약 요청 → 1명만 성공해야 함

**해결 전략**:

| 전략 | 장점 | 단점 | 적용 여부 |
|------|------|------|-----------|
| 낙관적 락 (version) | 충돌 적을 때 성능 좋음 | 재시도 로직 복잡, 충돌 많으면 성능 저하 | ❌ |
| 비관적 락 (SELECT FOR UPDATE) | 구현 단순, 정합성 보장 | 단일 DB 의존, 락 경합 시 지연 | ✅ 필수 |
| Redisson 분산락 | DB 도달 전 차단, 분산 환경 대응 | Redis 의존성 추가 | ✅ 도전 |

**락 대상**: `PRODUCT` 테이블 (상품 상태 변경의 원천)

**비관적 락 흐름**:
```
POST /products/{id}/reserve 수신
  → Redisson tryLock(key="lock:product:{id}", wait=0, lease=3s)  ← 도전 기능
  → @Transactional 시작
  → SELECT product WHERE id=? FOR UPDATE              ← DB 레벨 락
  → status == SALE 확인 + 활성 TRADE 없음 확인
  → PRODUCT.status = RESERVED
  → TRADE 생성 (buyer_id, seller_id, status=RESERVED)
  → transaction COMMIT → Redisson unlock
  → 200 응답
```

> waitTime=0인 이유: 대기하면 사용자는 "응답 없음" 경험. 즉시 실패가 UX에 좋다.

---

## 4. 채팅 (WebSocket/STOMP)

### 4-1. 채팅방 생성 정책

**예약 전 자유 채팅 허용**:
- 구매자가 상품 상세에서 [채팅하기] 클릭 → `POST /chat-rooms` 호출
- 동일 (buyer_id, product_id) 채팅방 이미 존재 → 기존 채팅방 ID 반환 (중복 생성 방지)
- 예약은 채팅방 내 [예약하기] 버튼 또는 상품 상세에서 독립적으로 가능

### 4-2. WebSocket 연결 흐름

```
클라이언트 → WS 핸드셰이크 (/ws-chat)
           → STOMP CONNECT (JWT 헤더 포함)
           → 서버: JWT 검증 → 세션 등록
           → STOMP SUBSCRIBE /user/queue/messages (개인 채널)
           → STOMP SUBSCRIBE /topic/room.{chatRoomId} (채팅방 채널)
```

**JWT 정책**:
- WebSocket은 **연결 시점(STOMP CONNECT) 1회만 JWT를 검증**한다.
- 연결이 성립한 뒤 AccessToken 만료 시점을 이유로 기존 STOMP 세션을 강제 종료하지 않는다.
- 이후 메시지 처리에서는 토큰 재검증 대신 **chatRoom 참여자 여부**만 확인한다.
- 재연결 시에는 최신 AccessToken으로 다시 CONNECT 해야 한다.

### 4-3. 메시지 전송 흐름

```
클라이언트 SEND → /app/chat.sendMessage
서버:
  1. MessageDTO 역직렬화
  2. chatRoom 참여자 검증
  3. Message 엔티티 저장 (MySQL)
  4. /topic/room.{chatRoomId} 로 브로드캐스트
```

### 4-4. 메시지 저장 정책

- **저장소**: MySQL (chat_message 테이블)
- **이유**: Redis Pub/Sub은 영속성 없음. 채팅 내역 재조회 필요
- **페이지네이션**: Cursor 기반 (messageId DESC)
- **연결 끊김 처리**: 재연결 시 마지막 수신 messageId 이후 REST API로 조회

---

## 5. 찜하기

- 회원당 상품 1개 → 1개 찜 (중복 불가)
- UNIQUE KEY (member_id, product_id) — DB 레벨 중복 방지
- 찜 수는 product 테이블의 `like_count` 컬럼으로 캐싱 (정합성 허용 오차 ±1, **JPQL `@Modifying` 벌크 UPDATE 사용 — JPA dirty checking 금지**)

---

## 6. 리뷰

- 거래 완료(SOLD) 상태의 구매자만 작성 가능
- 별점: 1~5 정수
- 내용: 최대 200자
- 리뷰 작성 시 판매자의 `average_rating`, `review_count` 갱신 (DB UPDATE)
- 수정/삭제 불가 (신뢰성 보장)
