v2/04-기능 명세서.md
# 04. 기능 명세서

> **버전**: v1.5 (위치 기반 서비스 섹션 추가 / Lettuce 분산락 / RT Rotation 반영, Redis ZSET 인기검색어 반영)

> **핵심 정책 요약 (전체 문서 공통)**
>
> | 정책 | 결정 | 이유 |
> |------|------|------|
> | 예약 모델 | **즉시 RESERVED** (판매자 승인 없음) | 3주 일정 + 당근마켓 실제 UX |
> | 채팅 생성 | **예약 전 자유 채팅 허용** | 중고거래 실제 흐름 반영 |
> | PRODUCT 개념 | **중고 판매글(Listing)** | 카탈로그 상품 아님 |
> | 이미지 처리 | **PRODUCT_IMAGE 테이블 저장** (파일 업로드 미구현) | ERD/패키지 구조 기준 통일 |

---

## 1. 회원 인증

### 1-1. 회원가입

**요청 데이터**: 이메일, 비밀번호, 닉네임, 프로필 이미지 URL (선택)

**처리 로직**:
1. 이메일 형식 검증 (RFC 5322)
2. 비밀번호 정책 검증 (8자 이상, 영문+숫자+특수문자 각 1자 이상 포함)
3. 닉네임 중복 조회 (Lettuce SETNX 락 기반 동시 등록 방지)
4. 이메일 중복 조회 (`SELECT 1 FROM member WHERE email = ?`)
5. BCrypt 비밀번호 해시
6. Member 엔티티 저장
7. 201 Created 반환

**실패 케이스**:
- 이메일 중복 → 409 Conflict `{ "code": "DUPLICATE_EMAIL" }`
- 닉네임 중복 → 409 Conflict `{ "code": "DUPLICATE_NICKNAME" }`
- 유효성 오류 → 400 Bad Request

---

### 1-2. 로그인 & JWT 발급

**JWT 구조**:

| 토큰 | 만료 | 저장 위치 | 용도 |
|------|------|-----------|------|
| AccessToken (AT) | 15분 | 클라이언트 메모리 | API 인증 헤더 (`Authorization: Bearer`) |
| RefreshToken (RT) | 7일 | Redis (`refresh:{memberId}`) | AT 재발급 전용 |

**AccessToken Payload**:
```json
{
  "sub": "user@example.com",
  "memberId": 1,
  "nickname": "닉네임",
  "role": "USER",
  "iat": 1700000000,
  "exp": 1700000900
}
```

**처리 로직**:
1. 이메일로 회원 조회
2. BCrypt 비교
3. AccessToken 생성 (HMAC-SHA256)
4. RefreshToken 생성 → Redis 저장 (`RT:{memberId}`, TTL 7일)
5. 응답 반환 (accessToken, refreshToken, expiresIn)

**토큰 재발급** (`POST /auth/refresh`):
1. RT 서명·만료 검증
2. Redis 저장 RT와 일치 여부 확인 (불일치 시 탈취 의심 → 401)
3. 새 AT + 새 RT 발급 (RT Rotation — 기존 RT 폐기)
4. Redis에 새 RT 저장

**로그아웃** (`POST /auth/logout`):
1. AT를 Redis 블랙리스트에 등록 (남은 만료 시간만큼 TTL)
2. Redis에서 RT 삭제 → 이후 재발급 불가
3. 200 OK 반환

---

## 2. 상품 관리

### 2-1. 상품 등록

**필드 제약**:

| 필드 | 타입 | 제약 |
|------|------|------|
| title | String | 2~40자, NotBlank |
| description | String | 최대 1000자 |
| price | Integer | 100~99,999,999 |
| categoryId | Long | 카테고리 ID |
| status | Enum | 기본값 SALE |

**이미지 처리 정책**:
- `PRODUCT_IMAGE` 별도 테이블에 저장 (`image_url`, `sort_order` 컬럼)
- 파일 업로드(Multipart, S3) 미구현 — 클라이언트가 외부 이미지 URL을 직접 전달
- 이미지 수정 시 기존 `PRODUCT_IMAGE` 레코드 전체 삭제 후 재등록 (전체 교체 방식)
- v2 이후 S3 Presigned URL 방식으로 전환 예정 (Out of Scope)

---

### 2-2. 상품 목록 조회

**페이지네이션**: Cursor 기반 (createdAt + id 조합)

> **왜 Cursor?** Offset 방식은 데이터 삽입/삭제 시 중복/누락 발생. 무한 스크롤 UX에 적합.

**정렬 기본값**: 최신 등록순 (createdAt DESC, id DESC)

**응답 필드**: id, title, price, thumbnailUrl, status, createdAt, likeCount

---

### 2-3. 상품 검색 (QueryDSL + Redis ZSET 인기검색어)

**검색 조건**:

| 파라미터 | 설명 | 필수 |
|----------|------|------|
| keyword | 제목 LIKE 검색 | 선택 |
| categoryId | 카테고리 ID | 선택 |
| status | 판매 상태 필터 | 선택 (기본: SALE) |

**QueryDSL 동적 쿼리 예시**:
```java
BooleanBuilder builder = new BooleanBuilder();
if (keyword != null) builder.and(product.title.containsIgnoreCase(keyword));
if (categoryId != null) builder.and(product.category.id.eq(categoryId));
if (status != null) builder.and(product.status.eq(status));
```

**인기 검색어 — Redis Sorted Set (Write-Through 패턴)**:

| 항목 | 값 |
|------|----|
| 저장소 | Redis ZSET (`search:ranking`) |
| 카운팅 | 검색 시 `ZINCRBY search:ranking 1 {keyword}` (실시간 반영) |
| 조회 | `ZREVRANGE search:ranking 0 9 WITHSCORES` (TOP 10) |
| 캐시 전략 | **Write-Through** — 검색 요청 시 즉시 Redis에 기록, 조회 시 Redis에서 직접 반환 |

```
검색 요청 → Redis ZINCRBY (키워드 카운트 +1) → QueryDSL 검색 → 결과 반환
인기검색어 조회 → Redis ZREVRANGE TOP 10 → 즉시 반환
```

---

## 3. 거래 상태 관리 ⭐

### 3-1. 예약 모델 결정: 즉시 RESERVED

구매자가 [예약하기]를 누르면 **판매자 승인 없이 즉시 RESERVED**로 전이한다.

**왜 판매자 승인 단계(PENDING)를 두지 않는가?**
- 3주 일정에서 PENDING + 실시간 알림 구현은 범위 초과
- 당근마켓도 실제로 "예약하기 = 즉시 예약" 방식으로 동작
- 판매자가 원하지 않으면 RESERVED → SALE로 직접 취소 가능 (거절 효과)

---

### 3-2. 상태 전이 규칙 (API + 처리 주체 포함)

| TRADE.status 전이 | 이벤트 | 처리 주체 | PRODUCT.status 변화 | API |
|------------------|--------|-----------|---------------------|-----|
| SALE → RESERVED | 예약하기 클릭 | **구매자** | SALE → RESERVED | `POST /products/{id}/reserve` |
| RESERVED → TRADING | 거래 확정 | **판매자** | RESERVED 유지 (변경 없음) | `PATCH /trades/{id}/status` |
| RESERVED → SALE | 예약 취소 | 구매자 또는 판매자 | RESERVED → SALE | `PATCH /trades/{id}/status` |
| TRADING → SOLD | 거래 완료 확인 | **구매자** | RESERVED → SOLD_OUT | `PATCH /trades/{id}/status` |
| TRADING → SALE | 거래 취소 | 판매자 또는 구매자 | RESERVED → SALE | `PATCH /trades/{id}/status` |
| SOLD → REVIEWED | 리뷰 작성 | **구매자** | SOLD_OUT 유지 | `POST /trades/{id}/reviews` |
| — | 판매글 삭제 | **판매자** | SALE → is_deleted=true | `DELETE /products/{id}` |

> **PRODUCT.status ↔ TRADE.status 동기화 규칙**: TRADE.RESERVED 시 PRODUCT.RESERVED / TRADE.SOLD 시 PRODUCT.SOLD_OUT. TRADE.TRADING 구간에서 PRODUCT는 RESERVED 상태를 유지한다 (PRODUCT에 TRADING 상태 없음).

> **프론트 거래 흐름**: "현재 프론트 거래 흐름은 예약 생성(구매자) → 거래 확정(판매자) → 거래 완료 확인(구매자) → 리뷰 작성(구매자) 순서로 구성되어 있다."

---

### 3-3. 권한 매트릭스

| 액션 | 판매자 | 구매자 | 비고 |
|------|--------|--------|------|
| 상품 등록/수정/삭제 | ✅ | ❌ | 본인 판매글만 |
| 예약하기 (SALE→RESERVED) | ❌ | ✅ | 본인 상품 예약 불가 |
| 예약 취소 (RESERVED→SALE) | ✅ | ✅ | 양측 가능 |
| 거래 확정 (RESERVED→TRADING) | ✅ | ❌ | |
| 거래 완료 확인 (TRADING→SOLD) | ❌ | ✅ | 구매자가 직접 확인 |
| 거래 취소 (TRADING→SALE) | ✅ | ✅ | 양측 가능 |
| 리뷰 작성 (SOLD→REVIEWED) | ❌ | ✅ | 해당 거래의 구매자만 |
| 채팅 시작 | ❌ (자기 상품) | ✅ | |

---

### 3-4. 동시성 제어 — 예약 처리 상세

**문제**: 동시에 N명이 예약 요청 → 1명만 성공해야 함

**해결 전략**:

| 전략 | 장점 | 단점 | 적용 여부 |
|------|------|------|-----------|
| 낙관적 락 (version) | 충돌 적을 때 성능 좋음 | 재시도 로직 복잡, 충돌 많으면 성능 저하 | ❌ |
| 비관적 락 (SELECT FOR UPDATE) | 구현 단순, 정합성 보장 | 단일 DB 의존, 락 경합 시 지연 | ✅ (DB 레벨 보호) |
| Lettuce 분산락 (SETNX) | DB 도달 전 차단, 분산 환경 대응 | 스핀락 구현 필요 | ✅ (Redis 레벨 보호) |

**락 대상**: `PRODUCT` 테이블 (상품 상태 변경의 원천)

**이중 락 흐름 (Lettuce 분산락 + 비관적 락)**:
```
POST /products/{id}/reserve 수신
  → TradeFacade: LockService.executeWithLock(key="lock:product:{id}")
    → Lettuce SETNX + 지수 백오프 스핀락 (TTL=3s, maxRetry=10)
  → @Transactional 시작
  → SELECT product WHERE id=? FOR UPDATE              ← DB 레벨 락 (Fallback)
  → status == SALE 확인
  → PRODUCT.status = RESERVED
  → TRADE 생성 (buyer_id, seller_id, status=RESERVED)
  → transaction COMMIT → Lua 스크립트로 Redis 락 해제
  → 200 응답
```

> 지수 백오프 스핀락: 초기 50ms → 최대 1000ms까지 대기 간격 증가, 최대 10회 재시도 후 LOCK_TIMEOUT 예외.

---

## 4. 채팅 (WebSocket/STOMP)

### 4-1. 채팅방 생성 정책

**예약 전 자유 채팅 허용**:
- 구매자가 상품 상세에서 [채팅하기] 클릭 → `POST /chat-rooms` 호출
- 동일 (buyer_id, product_id) 채팅방 이미 존재 → 기존 채팅방 ID 반환 (중복 생성 방지)
- 예약은 채팅방 내 [예약하기] 버튼 또는 상품 상세에서 독립적으로 가능

### 4-2. WebSocket 연결 흐름

```
클라이언트 → WS 핸드셰이크 (/ws-chat)
           → STOMP CONNECT (JWT 헤더 포함)
           → 서버: JWT 검증 → 세션 등록
           → STOMP SUBSCRIBE /user/queue/messages (개인 채널)
           → STOMP SUBSCRIBE /topic/room.{chatRoomId} (채팅방 채널)
```

**JWT 정책**:
- WebSocket은 **연결 시점(STOMP CONNECT) 1회만 JWT를 검증**한다.
- 연결이 성립한 뒤 AccessToken 만료 시점을 이유로 기존 STOMP 세션을 강제 종료하지 않는다.
- 이후 메시지 처리에서는 토큰 재검증 대신 **chatRoom 참여자 여부**만 확인한다.
- 재연결 시에는 최신 AccessToken으로 다시 CONNECT 해야 한다.

### 4-3. 메시지 전송 흐름

```
클라이언트 SEND → /app/chat.sendMessage
서버:
  1. MessageDTO 역직렬화
  2. chatRoom 참여자 검증
  3. Message 엔티티 저장 (MySQL)
  4. /topic/room.{chatRoomId} 로 브로드캐스트
```

### 4-4. 메시지 저장 정책

- **저장소**: MySQL (chat_message 테이블)
- **이유**: Redis Pub/Sub은 영속성 없음. 채팅 내역 재조회 필요
- **페이지네이션**: Cursor 기반 (messageId DESC)
- **연결 끊김 처리**: 재연결 시 마지막 수신 messageId 이후 REST API로 조회

---

## 5. 찜하기

- 회원당 상품 1개 → 1개 찜 (중복 불가)
- UNIQUE KEY (product_id, member_id) — DB 레벨 중복 방지
- 소프트 삭제 방식 (`is_deleted` 플래그) — 재찜 시 기존 레코드 `restore()` 활성화 (멱등 처리)
- 찜 수는 product 테이블의 `like_count` 컬럼으로 비정규화 (`product.incrementLikeCount()` / `decrementLikeCount()` — **JPA dirty checking 방식**)
- **동시성 제어**: `LikeFacade`에서 Lettuce 분산락 적용 (`lock:product:{id}`) — 찜/찜취소 시 like_count 정합성 보장

---

## 6. 리뷰

- 거래 완료(SOLD) 상태의 구매자만 작성 가능
- 별점: **0.5~5.0 (BigDecimal, 0.5 단위)**
- 내용: 최대 **500자**
- 리뷰 작성 시 판매자의 `average_rating`, `review_count` 갱신 (단일 트랜잭션 내 비관적 락으로 Lost Update 방지)
- 리뷰 작성 후 `Trade.proceed(BUYER)` 호출 → SOLD → REVIEWED 상태 전이
- 수정/삭제 불가 (신뢰성 보장)

---

## 7. 위치 기반 서비스

### 7-1. 동네 인증

**목적**: 회원이 자신의 실거주 위치를 인증하여 근처 상품 조회를 활성화한다.

**입력 방식 2가지**:

| 방식 | 엔드포인트 | 요청 데이터 | 카카오 API 흐름 |
|------|-----------|-------------|----------------|
| GPS | `POST /api/location/verify/gps` | `{ lat, lng }` | Reverse Geocoding → 행정구역명 |
| 주소 | `POST /api/location/verify/address` | `{ address }` | Geocoding(주소→좌표) → Reverse Geocoding → 행정구역명 |

**처리 로직**:
1. 카카오 API 호출 (트랜잭션 없음 — 외부 API 대기 중 DB 커넥션 점유 방지)
2. 응답에서 좌표 + 행정구역명 추출
3. DB 저장 (별도 `LocationUpdater` 서비스에서 짧은 트랜잭션으로 분리)
   - `MEMBER.location` ← JTS `Point` 객체 (SRID 4326, GEOMETRY 타입)
   - `MEMBER.location_name` ← 행정구역명 (예: "서울 마포구 합정동")
   - `MEMBER.location_radius` ← 기본 반경 (기본값 적용)

**공간 좌표계**: SRID 4326 (WGS 84 지리 좌표계)
- `GeometryFactory(PrecisionModel(), 4326)` 사용
- JTS `Coordinate(lng, lat)` 순서 (x=경도, y=위도)

**실패 케이스**:

| 시나리오 | HTTP | ErrorCode |
|----------|------|-----------|
| 카카오 API 서버 오류 | 502 | `KAKAO_API_ERROR` |
| 주소 → 좌표 변환 실패 | 400 | `KAKAO_ADDRESS_NOT_FOUND` |
| 좌표 → 행정구역 변환 실패 | 400 | `KAKAO_REGION_NOT_FOUND` |

---

### 7-2. 근처 상품 조회

**엔드포인트**: `GET /api/products/nearby?page=0`

**페이지네이션**: Offset 기반 (Spring `Page<T>`) — 페이지 크기 20

> 커서 기반이 아닌 오프셋을 사용하는 이유: 거리 오름차순 정렬의 특성상 동일 반경 내 상품이 한정적이며, 전체 페이지 수 제공이 필요한 UX에 적합.

**처리 로직**:
1. 로그인 회원의 `MEMBER.location` 조회
2. location이 null → 400 `LOCATION_NOT_VERIFIED` 반환
3. `ST_Distance_Sphere(product.location, member.location)` ≤ `member.location_radius` 조건
4. 조건: `product.status IN (SALE, RESERVED)` + `product.is_deleted = false` + `seller_id ≠ memberId`
5. 거리 오름차순 정렬 후 페이지 반환

**응답 필드**: productId, title, price, thumbnailUrl, status, locationName, distanceKm

**MySQL 공간 함수**:
```sql
ST_Distance_Sphere(product.location, ST_GeomFromText('POINT(lng lat)', 4326))
-- ST_GeomFromText 사용: ST_Point(lng, lat, srid)는 MySQL 8.0.24+ 전용
-- MySQL ST_X = 위도, ST_Y = 경도 (SRID 4326 지리 좌표계)
```
